--- a/CurrencyWPF.csproj
+++ b/CurrencyWPF.csproj
@@ -7,4 +7,9 @@
     <UseWPF>true</UseWPF>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="CurrencyWPF.Model\" />
+    <Folder Include="CurrencyWPF.ViewModel\" />
+  </ItemGroup>
+
 </Project>
